# elasticrab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: scaling.rs
docs/: DESIGN.md  PEPSI_COMPARISON.md
examples/: animate_pdb.rs
scripts/: calibrate-gamma.sh
src/: align.rs  eigen.rs  hessian.rs  lib.rs  main.rs  network.rs  rtb.rs  sparse.rs
src/cli/: io.rs  mod.rs  voromqa.rs
tests/: cli.rs  collectivity.rs  iterative_transition.rs  nolb_rtb.rs  prody_1ubi.rs  prody_rtb.rs  sparse.rs  transition.rs
tests/common/: mod.rs
tests/data/: ATTRIBUTION.md  nolb_collectivity_crambin.txt  nolb_crambin_freqs.txt  nolb_nlin_hinge.txt  nolb_transition_hinge.txt
