[package]
name = "elasticrab"
version = "0.1.0"
authors = ["Mikael Lund"]
edition = "2021"
license = "Apache-2.0"
description = "Anisotropic Network Model (ANM) normal-mode analysis: atoms in, frequencies and modes out."
repository = "https://github.com/mlund/elasticrab"
documentation = "https://docs.rs/elasticrab"
readme = "README.md"
keywords = ["normal-modes", "anm", "elastic-network", "biophysics", "nma"]
categories = ["science"]

# Build docs.rs with every feature so the SIMD/parallel paths are documented.
[package.metadata.docs.rs]
all-features = true

[features]
# Partial eigensolver for the lowest non-zero modes, and a SIMD dense solver.
sparse = ["dep:faer"]
# Multi-threaded faer kernels (rayon): faster on large systems, but results
# differ from the serial build at the ULP level (parallel float reductions).
parallel = ["sparse", "faer/rayon"]

[dependencies]
nalgebra = { version = "0.35", default-features = false, features = ["std"] }
faer = { version = "0.24", optional = true, default-features = false, features = ["std", "sparse-linalg"] }

[dev-dependencies]
approx = "0.5"
divan = "0.1"

[[bench]]
name = "scaling"
harness = false
required-features = ["sparse"]
